--- a/index.css
+++ b/index.css
@@ -92,39 +92,71 @@ body {
 }
 
 .reaction{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     height: 3rem;
     width: 100%;
-    background-color: hsl(0, 100%, 67%);
-    opacity: 0.1;
+    background-color: hsla(0, 100%, 67%,0.1);
+    padding: 0 1rem 0 1rem;
     border-radius: 5px;
     margin-bottom: 1.5rem;
+}
+
+.textReaction{
+    color:hsl(0, 100%, 67%);;
+    margin-left: 0.5rem;
 }
 
 .memory{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem 0 1rem;
     height: 3rem;
     width: 100%;
-    background-color: hsl(39, 100%, 56%);
+    background-color: hsla(39, 100%, 56%,0.1);
     border-radius: 5px;
     margin-bottom: 1.5rem;
-    opacity: 0.1;
+}
+
+.textMemory{
+    color:hsl(39, 100%, 56%);
+    margin-left: 0.5rem;
 }
 
 .verbal{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem 0 1rem;
     height: 3rem;
     width: 100%;
-    background-color: hsl(166, 100%, 37%);
+    background-color: hsla(166, 100%, 37%,0.1);
     border-radius: 5px;
     margin-bottom: 1.5rem;
-    opacity: 0.1;
+}
+
+.textVerbal{
+    color:hsl(166, 100%, 37%);
+    margin-left: 0.5rem; 
 }
 
 .visual{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem 0 1rem;
     height: 3rem;
     width: 100%;
-    background-color: hsl(234, 85%, 45%);
+    background-color: hsla(234, 85%, 45%,0.1);
     border-radius: 5px;
     margin-bottom: 1.5rem;
-    opacity: 0.1;
+}
+
+.textVisual{
+    color:hsl(234, 85%, 45%);
+    margin-left: 0.5rem; 
 }
 
 .buttonContinue{
@@ -134,6 +166,23 @@ body {
     border: none;
     background-color: hsl(224, 30%, 27%);
     color: hsl(0, 0%, 100%);
+}
+
+.leftDivCategory{
+    display: flex;
+}
+
+.rightDivCategory{
+    display: flex;
+}
+
+.score{
+    margin-right: 0.3rem;
+    color: hsl(224, 30%, 27%);
+}
+
+.total{
+    color: hsla(224, 30%, 27%,0.5);
 }
 
 .buttonContinue:hover{
