--- a/index.css
+++ b/index.css
@@ -10,6 +10,8 @@ body {
     width: 100vw;
     align-items: center;
     justify-content: center;
+    font-family: 'Hanken Grotesk', sans-serif;
+    font-weight: 500, 700, 800;
 }
 
 .mainContainer{
@@ -160,8 +162,8 @@ body {
 }
 
 .buttonContinue{
-    margin-top: 0.8rem;
-    height: 2.5rem;
+    margin-top: 1rem;
+    height: 3rem;
     border-radius: 35px;
     border: none;
     background-color: hsl(224, 30%, 27%);
