--- a/index.css
+++ b/index.css
@@ -22,6 +22,15 @@ body {
   
 }
 
+@media screen and (max-width: 375px){
+    .mainContainer{
+        height: 100vh;
+        width: 100vw;
+        flex-direction: column;
+        border-radius: 0px;
+    }
+}
+
 .leftContainer{
     display: flex;
     flex: 1;
@@ -33,11 +42,23 @@ body {
     box-sizing: border-box
 }
 
+@media screen and (max-width: 375px){
+    .leftContainer{
+        border-radius: 0px 0px 30px 30px;
+        padding: 3vh 4vh 3vh 4vh;
+    }
+}
+
 .tittleLeft{
     font-size: 1.5rem;
     color: hsl(241, 100%, 89%);
 }
 
+@media screen and (max-width: 375px){
+    .tittleLeft{
+        font-size: 2.5vh;
+    }
+}
 .leftCircle{
     display: flex;
     align-items: center;
@@ -51,9 +72,23 @@ body {
   
 }
 
+@media screen and (max-width: 375px){
+    .leftCircle{
+        height: 20vh;
+        width: 20vh;
+        margin-top: 2vh;
+    }
+}
+
 .leftNumberTop{
     font-size: 5rem;
     color: hsl(0, 0%, 100%);
+}
+
+@media screen and (max-width: 375px){
+    .leftNumberTop{
+        font-size: 8vh;
+    }
 }
 
 .leftNumberBottom{
@@ -64,6 +99,18 @@ body {
     margin-top: 1.8rem;
     font-size: 2rem;
     color: hsl(0, 0%, 100%);
+}
+
+@media screen and (max-width: 375px){
+    .leftSubtittle{
+        font-size: 3.2vh;
+    }
+}
+
+@media screen and (max-width: 375px){
+    .leftSubtittle{
+        margin-top: 1.8vh;
+    }
 }
 
 .leftTextContainer{
@@ -87,10 +134,25 @@ body {
     box-sizing: border-box;
 }
 
+@media screen and (max-width: 375px){
+    .rightContainer{
+        flex: 2;
+        border-radius: 0px 0px 0px 0px;
+        padding: 3vh 4vh 3vh 4vh;
+    }  
+}
+
 .tittleRight{
     font-size: 1.5rem;
     color: hsl(224, 30%, 27%);
     margin-bottom: 1.8rem;
+}
+
+@media screen and (max-width: 375px){
+    .tittleRight{
+        font-size: 2.5vh;
+        margin-bottom: 2vh;
+    }
 }
 
 .reaction{
@@ -103,6 +165,12 @@ body {
     padding: 0 1rem 0 1rem;
     border-radius: 5px;
     margin-bottom: 1.5rem;
+}
+
+@media screen and (max-width: 375px){
+    .reaction{
+        margin-bottom: 2vh;
+    }
 }
 
 .textReaction{
@@ -122,6 +190,12 @@ body {
     margin-bottom: 1.5rem;
 }
 
+@media screen and (max-width: 375px){
+    .memory{
+        margin-bottom: 2vh;
+    }
+}
+
 .textMemory{
     color:hsl(39, 100%, 56%);
     margin-left: 0.5rem;
@@ -139,6 +213,12 @@ body {
     margin-bottom: 1.5rem;
 }
 
+@media screen and (max-width: 375px){
+    .verbal{
+        margin-bottom: 2vh;
+    }
+}
+
 .textVerbal{
     color:hsl(166, 100%, 37%);
     margin-left: 0.5rem; 
@@ -154,6 +234,12 @@ body {
     background-color: hsla(234, 85%, 45%,0.1);
     border-radius: 5px;
     margin-bottom: 1.5rem;
+}
+
+@media screen and (max-width: 375px){
+    .visual{
+        margin-bottom: 2vh;
+    }
 }
 
 .textVisual{
