add background hover continue buttom

--- a/index.css
+++ b/index.css
@@ -275,4 +275,5 @@ body {
 
 .buttonContinue:hover{
     cursor: pointer;
+    background-image: linear-gradient(to bottom, hsl(252, 100%, 67%), hsl(241, 81%, 54%));
 }
